@@ -1,225 +1,0 @@
-<gconfschemafile>
-<schemalist>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/bar/test</key>
-		<applyto>/apps/avant-window-navigator/bar/test</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>bool</type>
-		<default>1</default>
-		<locale name="C">
-			<short>Test.</short>
-			<long>Ignore.</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/bar/rounded_corners</key>
-		<applyto>/apps/avant-window-navigator/bar/rounded_corners</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>bool</type>
-		<default>1</default>
-		<locale name="C">
-			<short>Bar has rounded corners.</short>
-			<long>If enabled, the bar will have rounded corners.</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/bar/corner_radius</key>
-		<applyto>/apps/avant-window-navigator/bar/corner_radius</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>float</type>
-		<default>10.0</default>
-		<locale name="C">
-			<short>Corner radius in pixels.</short>
-			<long>Corner radius in pixels.</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/bar/render_pattern</key>
-		<applyto>/apps/avant-window-navigator/bar/render_pattern</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>bool</type>
-		<default>0</default>
-		<locale name="C">
-			<short>Renders the chosen pattern.</short>
-			<long>If enabled, the pattern from pattern_uri will be rendered.</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/bar/pattern_uri</key>
-		<applyto>/apps/avant-window-navigator/bar/pattern_uri</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>string</type>
-		<default>/usr/share/nautilus/patterns/terracotta.png</default>
-		<locale name="C">
-			<short>The PNG pattern to be rendered</short>
-			<long>URI for the PNG pattern to be rendered.</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/bar/pattern_alpha</key>
-		<applyto>/apps/avant-window-navigator/bar/pattern_alpha</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>float</type>
-		<default>1.0</default>
-		<locale name="C">
-			<short>Transparency of pattern.</short>
-			<long>Transparency of pattern, between 0.0 (fully transparent) - 1.0 (no transparency).</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/bar/glass_step_1</key>
-		<applyto>/apps/avant-window-navigator/bar/glass_step_1</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>string</type>
-		<default>454545C8</default>
-		<locale name="C">
-			<short>Color of the first gradient step.</short>
-			<long>Color in hex as REDGREENBLUEALPHA i.e. FFFFFF33</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/bar/glass_step_2</key>
-		<applyto>/apps/avant-window-navigator/bar/glass_step_2</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>string</type>
-		<default>010101BE</default>
-		<locale name="C">
-			<short>Color of the second gradient step.</short>
-			<long>Color in hex as REDGREENBLUEALPHA i.e. FFFFFF33</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/bar/glass_histep_1</key>
-		<applyto>/apps/avant-window-navigator/bar/glass_histep_1</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>string</type>
-		<default>FFFFFF0B</default>
-		<locale name="C">
-			<short>Color of the first hi-light step.</short>
-			<long>Color in hex as REDGREENBLUEALPHA i.e. FFFFFF33</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/bar/glass_histep_2</key>
-		<applyto>/apps/avant-window-navigator/bar/glass_histep_2</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>string</type>
-		<default>FFFFFF0A</default>
-		<locale name="C">
-			<short>Color of the second hi-light step.</short>
-			<long>Color in hex as REDGREENBLUEALPHA i.e. FFFFFF33</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/bar/border_color</key>
-		<applyto>/apps/avant-window-navigator/bar/border_color</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>string</type>
-		<default>000000CC</default>
-		<locale name="C">
-			<short>Color of the border frame.</short>
-			<long>Color in hex as REDGREENBLUEALPHA i.e. FFFFFF33</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/bar/hilight_color</key>
-		<applyto>/apps/avant-window-navigator/bar/hilight_color</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>string</type>
-		<default>FFFFFF11</default>
-		<locale name="C">
-			<short>Color of the internal hi-light frame.</short>
-			<long>Color in hex as REDGREENBLUEALPHA i.e. FFFFFF33</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/window_manager/show_all_windows</key>
-		<applyto>/apps/avant-window-navigator/window_manager/show_all_windows</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>bool</type>
-		<default>1</default>
-		<locale name="C">
-			<short>Show windows from all viewports.</short>
-			<long>If enabled, you will see windows from the entire viewport.</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/app/active_png</key>
-		<applyto>/apps/avant-window-navigator/app/active_png</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>string</type>
-		<default>/usr/share/avant-window-navigator/active/glow4.png</default>
-		<locale name="C">
-			<short>PNG file to use for active windows.</short>
-			<long>PNG file to use for active windows.</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/title/text_color</key>
-		<applyto>/apps/avant-window-navigator/title/text_color</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>string</type>
-		<default>FFFFFFFF</default>
-		<locale name="C">
-			<short>Color of title text.</short>
-			<long>Color in hex as REDGREENBLUEALPHA i.e. FFFFFF33</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/title/shadow_color</key>
-		<applyto>/apps/avant-window-navigator/title/shadow_color</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>string</type>
-		<default>1B3B12E1</default>
-		<locale name="C">
-			<short>Color of title text shadow.</short>
-			<long>Color in hex as REDGREENBLUEALPHA i.e. FFFFFF33</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/title/italic</key>
-		<applyto>/apps/avant-window-navigator/title/italic</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>bool</type>
-		<default>0</default>
-		<locale name="C">
-			<short>If text should be in italics.</short>
-			<long>If text should be in italics.</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/title/bold</key>
-		<applyto>/apps/avant-window-navigator/title/bold</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>bool</type>
-		<default>0</default>
-		<locale name="C">
-			<short>If text should be bold.</short>
-			<long>If text should be bold.</long>
-		 </locale>
-	</schema>
-	<schema>
-		<key>/schemas/apps/avant-window-navigator/title/font_size</key>
-		<applyto>/apps/avant-window-navigator/title/font_size</applyto>
-		<owner>avant-window-navigator</owner>
-		<type>float</type>
-		<default>15.0</default>
-		<locale name="C">
-			<short>Size of font.</short>
-			<long>Size, in pixels, of font.</long>
-		 </locale>
-	</schema>
-	<schema>
-        	<key>/schemas/apps/avant-window-navigator/window_manager/launchers</key>
-        	<applyto>/apps/avant-window-navigator/window_manager/launchers</applyto>
-        	<owner>avant-window-navigator</owner>
-        	<type>list</type>
-        	<list_type>string</list_type>
-        	<default>[]</default>
-        	<locale name="C">
-			<short>List of launchers</short>
-			<long>A list of .desktop file URIS to load.</long>
-       		</locale>
-      </schema>
-</schemalist>
-</gconfschemafile>
