@@ -309,6 +309,8 @@ _on_expose (GtkWidget *widget, GdkEventExpose *expose)
 	gint height;
 	cairo_t *cr = NULL;
 
+	if (!GDK_IS_DRAWABLE (widget->window))
+		return FALSE;
 	cr = gdk_cairo_create (widget->window);
 	if (!cr)
 		return FALSE;
