@@ -217,7 +217,9 @@ static gboolean
 _on_expose (GtkWidget *widget, GdkEventExpose *expose, AwnHotspot *hotspot)
 {
 	cairo_t *cr = NULL;
-	
+
+	if (!GDK_IS_DRAWABLE (widget->window))
+		return FALSE;	
 	cr = gdk_cairo_create (widget->window);
 	if (!cr)
 		return FALSE;
